# Portable-Programming-Language

./: .clang-format  .gitignore  CMakeLists.txt  IR.md  LICENSE.txt  README.md  README.txt  TODO.cpp  TODO.md  TODO.py  build.bat  build.sh  build_gnu.bat  ci.sh  codegen.py  compiler.py  demo.nc  demo.nc.asm  lexer.py  logger.py  nasm  package-lock.json  package.json  run.py  semantics.py  shell.bat  syntax.py  test.c  test.c.asm  test.py  tree.py
.github/workflows/: build_macos.yaml  build_site.yaml  build_test.yaml  build_test_macos.yaml  build_ubuntu.yaml  build_windows.yaml
backend/helloworld/: helloworld.pasm
backend/src/: assembler.cpp  assembler.h  x86_64.h
backend/tests/: fib.pasm  fib2.pasm  helloworld.pasm  helloworld.ppl  program.pasm  test.bat  test.cpp  test.s
design/: TODO.py  grammer_notes.py
design/desktop/: desktop_helloworld.ppl
design/tests/: console.c  fib.c  for.c  if.c
design/web/: web_helloworld.html  web_helloworld.ppl
docs/: IR.md  LANG.md  README.md  proj_direction  proj_direction2.txt  proj_direction3.txt
docs/PPL/: .clang-format  arrays.cpp  assignment_and_identifiers.c  attributes.cpp  better_than_last_time.c  bitfields.c  bitfields.cpp  builtins.cpp  enums.cpp  functions.cpp  ideas.c  imports.cpp  intrinsics.cpp  literals.c  loop.cpp  macros.c  name_before_type.c  namespaces.cpp  object_initialization.cpp  objects.c  operator_overloading.cpp  operators.c  phase1.cpp  phase2.cpp  pointers.c  qualifiers.c  ranges.cpp  struct.c  type_inference.c  types.c  unkown.cpp
docs/samples/: operators.c  pointers.c
examples/: for_loops.ppl  hello_world.ppl  if_statements.ppl  integers_and_arithmetic.ppl  terminal.ppl  while_loop1.ppl  while_loop2.ppl
ir/: IR.md  helloworld.x86
ir/Android/: README.md  build.sh  main.c
ir/iOS/: .gitignore  README.md  build.sh
ir/macOS/: helloworld.x86
ir/src/: assembler.cpp
ir/web/: helloworld.wasm  helloworld.wat  index.html
notebook/: 20240212.txt  20240214.txt  20240215.txt  20240218.txt  proj_direction1.txt  proj_direction2.txt  proj_direction3.txt
pstdlib/Windows/: exit.s  stub.s
src/: assembler.cpp  assembler.h  codegen.cpp  codegen.h  codegen.py  compiler.cpp  compiler.py  grammar.cpp  grammar.h  grammer.h  grammer.py  hashmap.hpp  lexer.cpp  lexer.h  lexer.py  linker.py  llvm_ir.cpp  logger.h  logger.hpp  logger.py  mem.h  mem.hpp  nc_defer.h  parser.cpp  ppl.cpp  ppl.h  ppl.py  ppl_core.h  ppl_core.hpp  ppl_error.hpp  ppl_types.hpp  preparser.py  syntax.h  syntax.py  tests.cpp  tests.py  timing.cpp  timing.h  tree.cpp  tree.h  (+5 more)
src/legacy/: codegen.py  compiler.py  grammer.py  tests.py
src/nc/: pal.hpp  pal_unix.hpp  pal_windows.hpp
src/pal/: pal_unix.hpp  pal_windows.hpp
src/plasmacompiler/: compiler.py  optimization.py
src/site/: index.html
src/std/: ppl_console.cpp  ppl_console.h  ppl_core.cpp  ppl_core.h  ppl_random.h  ppl_time.h  utf8.c  utf8.h
tests/: comments.c  conditional.c  console.c  dynamic_array.c  expression.c  factorial.c  fib.c  for.c  function.c  function2.c  helloworld.c  if.c  if2.c  if3.c  pointers.c  snake_game.c  switch.c  variable_scoping.c  variables.c  while.c
tests/backend/: fib.pasm  fib2.gt.c  fib2.pasm  helloworld.gt.c  helloworld.pasm
tests/codegen/: program1.c  program10.c  program11.c  program12.c  program13.c  program14.c  program15.c  program16.c  program17.c  program18.c  program2.c  program3.c  program4.c  program5.c  program6.c  program7.c  program8.c  program9.c  speed.c
tests/grammar/: _switch1.c  _switch2.c  compile_time_var_decl1.c  compile_time_var_decl2.c  data_pack1.c  data_pack2.c  data_pack3.c  (+63 more)
util/: RUN.bat  build.c  build.cpp  build_package.py  build_site.js  build_site.sh  ci_linter.c  ppl_util.h  util.h
(+108 files in other folders)
